--- a/signal-minio/docker-compose.yml
+++ b/signal-minio/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - MINIO_SECRET_KEY=zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
     entrypoint: >
       /bin/sh -c "
-      until (/usr/bin/mc config host add s3 https://change-to-your-domain.com:9000 $${MINIO_ACCESS_KEY} $${MINIO_SECRET_KEY}) do echo '...waiting...' && sleep 1; done;
+      until (/usr/bin/mc config host add s3 http://change-to-your-domain.com:9000 $${MINIO_ACCESS_KEY} $${MINIO_SECRET_KEY}) do echo '...waiting...' && sleep 1; done;
       /usr/bin/mc mb s3/name-of-bucket --region us-east-1;
       /usr/bin/mc policy set public s3/name-of-bucket;
       exit 0;
