--- a/signal-minio/minio-nginx.conf
+++ b/signal-minio/minio-nginx.conf
@@ -24,7 +24,7 @@ server {
       proxy_set_header Connection "";
       chunked_transfer_encoding off;
 
-      proxy_pass http://localhost:9000/change-to-your-bucket-name;
+      proxy_pass http://127.0.0.1:9000/change-to-your-bucket-name;
     }
 
     location /minio {
@@ -39,6 +39,6 @@ server {
       proxy_set_header Connection "";
       chunked_transfer_encoding off;
 
-      proxy_pass http://localhost:9000;
+      proxy_pass http://127.0.0.1:9000;
     }
 }
