--- a/signal-docker/docker-compose.yml
+++ b/signal-docker/docker-compose.yml
@@ -54,14 +54,14 @@ services:
       - ./postgres_abuse_database:/var/lib/postgresql/data
   redis_main:
     image: redis:5
-    container_name: redis_master
+    container_name: redis_main
     ports:
       - '6379:6379'
     volumes:
       - ./redis_main:/data
   redis_replication:
     image: redis:5
-    container_name: redis_slave
+    container_name: redis_replication
     command: redis-server --port 6380
     ports:
       - '6380:6380'
