--- a/coturn-server/example-turnserver.conf
+++ b/coturn-server/example-turnserver.conf
@@ -1,25 +1,19 @@
-listening-port=8080
-#tls-listening-port=443
-alt-listening-port=3478
-#alt-tls-listening-port=5349
+listening-port=3478
+#alt-listening-port=8080
+#tls-listening-port=5349
+#alt-tls-listening-port=443
 
 fingerprint
-lt-cred-mech
-use-auth-secret
+listening-ip=0.0.0.0
 
 static-auth-secret=secret
 
 realm=signal.domain.com
 
-total-quota=100
-bps-capacity=0
-stale-nonce
+min-port=10000
+max-port=20000
 
-cipher-list="ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AES:RSA+3DES:!ADH:!AECDH:!MD5"
-
-no-loopback-peers
-no-multicast-peers
-
+log-file=/var/log/turnserver.log
 
 #cert=/etc/letsencrypt/live/signal.domain.com/cert.pem
 #pkey=/etc/letsencrypt/live/signal.domain.com/privkey.pem
